--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" data-bs-theme="dark">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,23 +13,45 @@
     <div class="container my-5">
         <div class="p-5 text-center bg-body-tertiary rounded-3">
             <img src="./img/samuel_pires.jpg" alt="Imagem de Samuel Pires." width="250px" height="300px">
-            <h1 class="text-body-emphasis">Samuel Pires - Site Pessoal</h1>
-            <p class="col-lg-8 mx-auto fs-5 text-muted">Professor do Curso de Lógica de Programação para Desenvolvimento Web.</p>
+            <h1 class="text-body-emphasis">Samuel Pires - Personal Site</h1>
+            <h2>Professor do Curso de Lógica de Programação para Desenvolvimento Web.</h2>
+            <p class="col-lg-8 mx-auto fs-5 text-muted"><code>Programa</code> Brasil Digital</p>
+            
+            <hr>
+
+            <ul>
+                <li>Conhecimento em HTML, CSS e JavaScript</li>
+                <li>Capacidade de escrever código limpo e bem organizado</li>
+                <li>Entendimento de design responsivo</li>
+                <li>Experiência com frameworks e bibliotecas (como React, Angular, Vue.js)</li>
+                <li>Conhecimento de ferramentas de versionamento, como Git</li>
+                <li>Habilidade em trabalhar com APIs e integração de backend</li>
+                <li>Boa comunicação para colaborar com outros times (designers, outros desenvolvedores)</li>
+                <li>Capacidade de resolver problemas e depurar código eficientemente</li>
+                <li>Conhecimento em SEO (otimização para mecanismos de busca)</li>
+                <li>Disposição para aprender novas tecnologias e melhorar constantemente</li>
+            </ul>
+
+            <p>Sou a pessoa certa para a vaga de desenvolvedor web porque possuo uma sólida experiência em tecnologias essenciais, como <code>HTML</code>, <code>CSS</code>, <code>JavaScript</code> e frameworks modernos como React. Tenho habilidade em criar sites responsivos e funcionais, sempre buscando otimizar a experiência do usuário. Além disso, sou apaixonado por aprender novas tecnologias, sou um bom solucionador de problemas e trabalho bem em equipe. Estou comprometido em entregar soluções de alta qualidade e contribuir para o sucesso da equipe e da empresa.</p>
+
+            <hr>
+
             <div class="d-inline-flex gap-2 mb-5">
-            <button class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill" type="button">
-                <a href="https://github.com/samueljackbill" target="_blank">
-                    <img src="./img/github.png" alt="Ícone do GitHUB." width="24px" height="24px">
-                    &nbsp;
-                    GitHUB
-                </a>
-            </button>
-            <button class="btn btn-outline-secondary btn-lg px-4 rounded-pill" type="button">
-                <a href="https://www.linkedin.com/in/samueljackbill/" target="_blank">
-                    <img src="./img/linkedin.png" alt="Ícone do LinkedIn." width="24px" height="24px">
-                    &nbsp;
-                    LinkedIn
-                </a>
-            </button>
+                <button class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill" type="button">
+                    <a class="link_button" href="https://github.com/samueljackbill" target="_blank">
+                        <img src="./img/github.png" alt="Ícone do GitHUB." width="24px" height="24px">
+                        &nbsp;
+                        GitHUB
+                    </a>
+                </button>
+                <button class="btn btn-outline-secondary btn-lg px-4 rounded-pill" type="button">
+                    <a class="link_button" href="https://www.linkedin.com/in/samueljackbill/" target="_blank">
+                        <img src="./img/linkedin.png" alt="Ícone do LinkedIn." width="24px" height="24px">
+                        &nbsp;
+                        LinkedIn
+                    </a>
+                </button>
+                <p><small><small>&copy 2025 | Curso de Lógica de Programação para Desenvolvimento Web - <a id="link_mail" href="mailto:samueljackbill@gmail.com">Profº Samuel Pires</a> | Programa Brasil Digital</small></small></p>
             </div>
         </div>
     </div>
